Revision history for Perl extension Aion

{{$NEXT}}

0.4 2025-05-29T17:50:02Z

    - fix pod + add coverage on metacpan

0.3 2025-05-28T18:21:33Z

    - translate pod in Aion.pm

0.2 2025-05-28T16:41:00Z

    - add clearer and release aspects

0.1 2023-09-28T16:04:10Z

    - original version
