@@ -79,7 +79,7 @@
          "web" : "https://github.com/darviarush/perl-aion"
       }
    },
-   "version" : "0.4",
+   "version" : "0.5",
    "x_authority" : "cpan:DART",
    "x_contributors" : [
       "Iaroslav O. Kosmina <darviarush@ya.ru>",
