@@ -5,7 +5,7 @@ Aion - постмодернистская объектная система дл
 
 # VERSION
 
-0.4
+0.5
 
 # SYNOPSIS
 
