@@ -8,5 +8,5 @@ markdown_maker = "Liveman::MinillaPod2Markdown"
 module_maker="ModuleBuildTiny"
 static_install = "auto"
 
-[release]
-hooks = ["perl -MLiveman::MinillaHook -e 'Liveman::MinillaHook->release'"]
+[test_coverage]
+coverage_tool = "Devel::Cover"
