@@ -2,6 +2,8 @@ Revision history for Perl extension Aion
 
 {{$NEXT}}
 
+    - add coverage on metacpan. step 1
+
 0.4 2025-05-29T17:50:02Z
 
     - fix pod + add coverage on metacpan
